# QLog

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  meson.build
src/: CMakeLists.txt  builder.cpp  builder.hpp  meson.build  parser.cpp  parser.hpp
src/builddir/meson-logs/: meson-log.txt
src/builder/: CMakeLists.txt  builder.cpp  builder.hpp  meson.build
src/parser/: CMakeLists.txt  meson.build  parser.cpp  parser.hpp
tests/: CMakeLists.txt  meson.build  test1.cpp  test2.cpp  test2.h  test3.cpp  test_builder.cpp  test_parser.cpp
