#_i = [include_directories('builder', 'parser'), inc_dirs]

#_f = [
#    'parser/parser.cpp',
#    'builder/builder.cpp'
#]

#_l = library('Qlog',
#    files(_f),
#    include_directories: _i
#)

#qlog_dep = declare_dependency(
#        include_directories: _i,
#        link_with: _l
#)

subdir('builder')
subdir('parser')
